feat: add alpine-toolbox

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -46,5 +46,20 @@
       "semanticCommitScope": "{{parentDir}}",
       "semanticCommitType": "fix"
     }
+  ],
+  "customManagers": [
+    {
+      "customType": "regex",
+      "description": ["Process custom dependencies"],
+      "fileMatch": [
+        "(^|/)apps/.+/ci/latest\\.sh$"
+      ],
+      "matchStrings": [
+        // # renovate: datasource=docker depName=docker.io/library/alpine
+        // version="3.20.1"
+        "datasource=(?<datasource>\\S+) depName=(?<depName>\\S+)\\nversion=\"(?<currentValue>\\d[^\"]+)\""
+      ],
+      "datasourceTemplate": "{{#if datasource}}{{{datasource}}}{{else}}docker{{/if}}"
+    }
   ]
 }
