feat: add alpine-toolbox

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -10,6 +10,7 @@
   ],
   "dependencyDashboardTitle": "Renovate Dashboard 🤖",
   "suppressNotifications": ["prEditedNotification", "prIgnoreNotification"],
+  "ignorePaths": ["apps/alpine-toolbox"],
   "packageRules": [
     {
       "addLabels": ["renovate/container", "type/major"],
