feat(usbip): improvements

--- a/apps/usbip/Dockerfile
+++ b/apps/usbip/Dockerfile
@@ -5,25 +5,21 @@ ARG VERSION
 ARG CHANNEL
 
 ENV CHARSET="UTF-8" \
-    LANG="en_US.UTF-8" \
-    TZ="Etc/UTC"
+    LANG="en_US.UTF-8"
 
-RUN \
-    mkdir /config \
-    && \
-    adduser app -D -u 568 -g 568 -h /config \
-    && \
-    chown 568:568 /config \
+RUN set -e \
     && \
     apk add --no-cache \
         bash \
         ca-certificates \
         catatonit \
         curl \
+        less \
         \
         hwdata-usb \
         linux-tools-usbip~"${VERSION}"
 
+COPY ./apps/alpine-toolbox/rootfs /
 COPY ./apps/usbip/entrypoint.sh /entrypoint.sh
 
 ENTRYPOINT ["/usr/bin/catatonit", "--"]
