--- a/.github/labels.yaml
+++ b/.github/labels.yaml
@@ -1,11 +1,11 @@
----
-- name: renovate/container
-  color: "027fa0"
-- name: type/patch
-  color: "ffeC19"
-- name: type/minor
-  color: "ff9800"
-- name: type/major
-  color: "f6412d"
-- name: hold
-  color: "ee0701"
+# Renovate
+- { name: "renovate/container",      color: "027fa0" }
+- { name: "renovate/github-action",  color: "027fa0" }
+# Semantic Type
+- { name: "type/digest",             color: "ffec19" }
+- { name: "type/patch",              color: "ffec19" }
+- { name: "type/minor",              color: "ff9800" }
+- { name: "type/major",              color: "f6412d" }
+- { name: "type/break",              color: "f6412d" }
+# Uncategorized
+- { name: "hold/upstream",           color: "ee0701" }
