--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -3,49 +3,17 @@
   "extends": [
     "config:recommended",
     "docker:enableMajor",
+    "schedule:daily",
+    ":automergeBranch",
     ":dependencyDashboard",
     ":disableRateLimiting",
-    ":timezone(America/New_York)",
-    ":semanticCommits"
+    ":timezone(Europe/Prague)",
+    ":semanticCommits",
+    "github>prehor/home-ops//.github/renovate/automerge.json5",
+    "github>prehor/home-ops//.github/renovate/labels.json5"
   ],
+  "dependencyDashboard": true,
   "dependencyDashboardTitle": "Renovate Dashboard 🤖",
-  "suppressNotifications": ["prEditedNotification", "prIgnoreNotification"],
-  "ignorePaths": ["apps/alpine-toolbox"],
-  "packageRules": [
-    {
-      "addLabels": ["renovate/container", "type/major"],
-      "additionalBranchPrefix": "{{parentDir}}-",
-      "commitMessageExtra": " ( {{currentVersion}} → {{newVersion}} )",
-      "commitMessagePrefix": "feat({{parentDir}})!: ",
-      "commitMessageTopic": "{{depName}}",
-      "labels": ["app/{{parentDir}}"],
-      "matchDatasources": ["docker"],
-      "matchFileNames": ["apps/**/Dockerfile"],
-      "matchUpdateTypes": ["major"]
-    },
-    {
-      "addLabels": ["renovate/container", "type/minor"],
-      "additionalBranchPrefix": "{{parentDir}}-",
-      "commitMessageExtra": "( {{currentVersion}} → {{newVersion}} )",
-      "commitMessageTopic": "{{depName}}",
-      "labels": ["app/{{parentDir}}"],
-      "matchDatasources": ["docker"],
-      "matchFileNames": ["apps/**/Dockerfile"],
-      "matchUpdateTypes": ["minor"],
-      "semanticCommitScope": "{{parentDir}}",
-      "semanticCommitType": "feat"
-    },
-    {
-      "addLabels": ["renovate/container", "type/patch"],
-      "additionalBranchPrefix": "{{parentDir}}-",
-      "commitMessageExtra": "( {{currentVersion}} → {{newVersion}} )",
-      "commitMessageTopic": "{{depName}}",
-      "labels": ["app/{{parentDir}}"],
-      "matchDatasources": ["docker"],
-      "matchFileNames": ["apps/**/Dockerfile"],
-      "matchUpdateTypes": ["patch"],
-      "semanticCommitScope": "{{parentDir}}",
-      "semanticCommitType": "fix"
-    }
-  ]
+  "rebaseWhen": "conflicted",
+  "suppressNotifications": ["prEditedNotification", "prIgnoreNotification"]
 }
